--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,9 +1,23 @@
 <h2><%= link_to(@post.title, @post.url) %></h2>
 <% if @post.comments.count > 0 %>
+
 	<h4><%= pluralize(@post.comments.count, "Comment") %>:</h4>
-	<% @post.comments.each do |comment| %>
-		<p><%= comment.content %></p>
-	<% end %>
+	<table class="table table-hover">
+		<% @post.comments.each do |comment| %>
+			<tr>
+				<td><%= comment.content %></td>
+			</tr>
+		<% end %>
+	</table>
 <% else %>
 	<h4>No comments yet</h4>
 <% end %>
+
+<h4>Add a comment:</h4>
+<%= form_for([@post, @post.comments.build]) do |f| %>
+	<%= f.text_area :content, :rows => 4, :placeholder => "Comments" %>
+
+	<%= f.submit %>
+<% end %>
+
+<p><%= link_to 'Back to Post Index', posts_path %></p>
