--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,4 +1,4 @@
-<h2>Post Index</h2>
+<h2>Posts</h2>
 
 <table class="table table-hover">
 <% @posts.each do |post| %>
@@ -8,7 +8,8 @@
 <% end %>
 </table>
 
-<%= link_to raw("<button class=\"btn\" type=\"button\">Create new post</button>"), new_post_path %>
+<%= link_to 'Create new post', new_post_path %>
+
 
 <!-- <table>
 	<tr>
