--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,10 +1,11 @@
-<h2>New post</h2>
+<h2>Submit a new link</h2>
 
-<%= form_for(@posts) do |f| %>
+<%= form_for(@post) do |f| %>
 	<%= f.label :url, "URL:" %>
 	<%= f.text_field :url, :placeholder => "URL"%>
 	<%= f.label :title, "Title:" %>
 	<%= f.text_field :title, :placeholder => "Title" %>
+	<br>
 	<%= f.submit "Save post!" %>
 <% end %>
 
