--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,6 +1,5 @@
 <h2><%= link_to(@post.title, @post.url) %></h2>
 <% if @post.comments.count > 0 %>
-
 	<h4><%= pluralize(@post.comments.count, "Comment") %>:</h4>
 	<table class="table table-hover">
 		<% @post.comments.each do |comment| %>
@@ -13,10 +12,11 @@
 	<h4>No comments yet</h4>
 	<hr>
 <% end %>
-<h4>Add a comment:</h4>
-<%= form_for([@post, @post.comments.build]) do |f| %>
-	<%= f.text_area :content, :rows => 4, :placeholder => "Comments" %>
 
+<h4>Add a comment:</h4>
+<%= form_for([@post, @comment]) do |f| %>
+	<%= f.text_area :content, :rows => 4, :placeholder => "Comments" %>
+	<br>
 	<%= f.submit %>
 <% end %>
 
