--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,10 +1,22 @@
 <h2>Posts</h2>
 
 <table class="table table-hover">
-<% @posts.each do |post| %>
-<tr>
-	<td>Votes: <%= post.upvotes-post.downvotes %> <%= link_to(raw("<i class=\"icon-chevron-up\"></i>"), upvote_post_path(post)) %><%= link_to(raw("<i class=\"icon-chevron-down\"></i>"), downvote_post_path(post)) %> <%= link_to(post.title, post.url) %> (<%= link_to "#{pluralize post.comments.count, 'comment'}", post_path(post) %>)</td>
-</tr>
+	<% @posts.each do |post| %>
+	<tr>
+		<td>
+			Votes: <%= post.vote_number %>
+			<%= form_for [post, post.votes.build] do |f| %>
+				<%= f.hidden_field :direction, :value => "up" %>
+				<%= link_to raw('<i class="icon-chevron-up"></i>'), nil, :onclick => "$(this).closest('form').submit()" %>
+			<% end %>
+			<%= form_for [post, post.votes.build] do |f| %>
+				<%= f.hidden_field :direction, :value => "down" %>
+				<%= link_to raw('<i class="icon-chevron-down"></i>'), nil, :onclick => "$(this).closest('form').submit()" %>
+			<% end %>
+
+			<%= link_to(post.title, post.url) %> (<%= link_to "#{pluralize post.comments.count, 'comment'}", post_path(post) %>)
+		</td>
+	</tr>
 <% end %>
 </table>
 
