Add validation for posts and comments. Add helper to better handle post URLs.

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -16,3 +16,7 @@
 body { padding-top: 60px; }
 form { display: inline; }
 @import "bootstrap-responsive";
+
+input .field_with_errors {
+	border: 2px solid red;
+}
