--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,1 +1,9 @@
-Navigation
+<div class="navbar navbar-fixed-top">
+	<div class="navbar-inner">
+		<a class="brand" href="/">Thunderbolt News</a>
+		<ul class="nav custom">
+			<li><%= link_to 'All Posts', posts_path %></li>
+			<li><%= link_to 'Create new post', new_post_path %></li>
+		</ul>
+	</div>
+</div>
