--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -5,14 +5,8 @@
 	<tr>
 		<td>
 			Votes: <%= post.vote_number %>
-			<%= form_for [post, post.votes.build] do |f| %>
-				<%= f.hidden_field :direction, :value => "up" %>
-				<%= link_to raw('<i class="icon-chevron-up"></i>'), nil, :onclick => "$(this).closest('form').submit()" %>
-			<% end %>
-			<%= form_for [post, post.votes.build] do |f| %>
-				<%= f.hidden_field :direction, :value => "down" %>
-				<%= link_to raw('<i class="icon-chevron-down"></i>'), nil, :onclick => "$(this).closest('form').submit()" %>
-			<% end %>
+				<%= link_to raw('<i class="icon-chevron-up"></i>'), upvote_post_path(post) %>
+				<%= link_to raw('<i class="icon-chevron-down"></i>'), downvote_post_path(post) %>
 
 			<%= link_to(post.title, display_url_link(post)) %> (<%= link_to "#{pluralize post.comments.count, 'comment'}", post_path(post) %>)
 		</td>
