--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -14,4 +14,6 @@
 <% end %>
 </table>
 
-<%= link_to 'Create new post', new_post_path %>
+<% if logged_in? %>
+	<%= link_to 'Create new post', new_post_path %>
+<% end %>
