--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -10,7 +10,7 @@
 
 			<%= link_to(post.title, display_url_link(post)) %> (<%= link_to "#{pluralize post.comments.count, 'comment'}", post_path(post) %>)
 			<% if post.user %>
-				Posted By: <%= post.user.username %> 
+				Posted By: <%= link_to post.user.username, user_path(post.user) %> 
 			<% end %>
 		</td>
 	</tr>
