Add Twitter feed to user profiles.

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -12,6 +12,8 @@
 	</div>
 	<%= f.label :password, "Password:" %>
 	<%= f.password_field :password, :placeholder => "Password" %>
+	<%= f.label :twitter, "Twitter Username (optional):" %>
+	<%= f.text_field :twitter, :placeholder => "Twitter Username" %>
 	<br>
 	<div class="actions">	
 		<%= f.submit "Let's go!" %>
