--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -9,8 +9,12 @@
 				<%= link_to raw('<i class="icon-chevron-down"></i>'), downvote_post_path(post) %>
 
 			<%= link_to(post.title, display_url_link(post)) %> (<%= link_to "#{pluralize post.comments.count, 'comment'}", post_path(post) %>)
+			submitted <%= time_ago_in_words(post.created_at) %> ago
 			<% if post.user %>
-				Posted By: <%= link_to post.user.username, user_path(post.user) %> 
+				by <%= link_to post.user.username, user_path(post.user) %> 
+			<% end %>
+			<% if post.category %>
+				to <%= post.category.name %>
 			<% end %>
 		</td>
 	</tr>
